css/about.css
body {
  width: 100vw;
  background-color: #FFFFFF;
  overflow-x: hidden;
}

header {
  background-color: #FFFFFF;
}

.logo-text, .nav-a {
  color:#000000;
  text-decoration-color: #000000;
}

.profile-section {
  margin: 80px 15px 0;
}

.color-bars {
  height: 130px;
  position: relative;
}

.color-bars div {
  margin: 1em 0;
  position: absolute;
  right: -40vw;
}

.title {
  margin-top: 0.2em;
  position: absolute;
  left: 0;
  font-size: 3em;
  font-weight: 500;
}

.blue-bar {
  width: 35vw;
  height: 1.3em;
  background-color: #4285F4;
  top: 0;
}

.red-bar {
  width: 30vw;
  height: 1.3em;
  background-color: #DB4437;
  top: 2em;
}

.yellow-bar {
  width: 25vw;
  height: 1.3em;
  background-color: #F4B400;
  top: 4em;
}

.green-bar {
  width: 20vw;
  height: 1.3em;
  background-color: #0F9D58;
  top: 6em;
}

.bar-slideIn {
  transform: translateX(-40vw);
  transition: 1s all ease-in-out;
}

.main-text {
  margin: 80px 0 1em;
  padding-top: 20px;
  display: flex;
  justify-content: space-between;
  border-top: 0.5px solid #000000;
}

.main-text h1 {
  width: 47.5%;
  font-family: 'Lora', serif;
  font-size: 2.3em;
}

.main-text p {
  width: 47.5%;
  display: block;
  font-size: 1.2em;
  line-height: 1.3em;
}

.profile-image-container {
  width: 100%;
  height: 400px;
}

.profile-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: right;
}

.resume {
  margin: 20px 15px 30px;
  padding-top: 20px;
  border-top: 0.5px solid #000000;
  display: flex;
  justify-content: space-between;
}

.resume h1 {
  width: 47.5%;
  font-family: 'Lora', serif;
  font-size: 2em;
}

.resume > div {
  width: 47.5%;
}

.organized div {
  margin-bottom: 1em;
}

.organized h2 {
  font-size: 1.2em;
  line-height: 1.3em;
}

.organized div p {
  font-size: 0.9em;
  line-height: 1.4em;
}

.frame-button {
  padding: 0.5em;
  border: 0.5px solid #000000;
  display: block;
  text-align: center;
  text-decoration: none;
  color: #000000;
}

.frame-button:hover {
  background-color: #000000;
  color: #FFFFFF;
}

.work-a {
  width: 13em;
  margin: 20px 0 10px;
  font-size: 1em;
}

@media screen and (max-width: 580px) {
  .work-a {
    width: 13em;
    margin: 20px 0 10px;
    font-size: 0.7em;
  }
}

